app/assets/stylesheets/peoplefinder/organogram.scss
.organogram {
  .search-box, .new-profile, #last_update {
    display: none;
  }
}
.organogram-content {
  #print {
    float: right;
  }
  text-align: center;
  .group-title h1 {
    border: none;
  }
  h2 {
    margin-top: 0;
  }
  .leader, .person, .team {
    display: inline-block;
    margin: 0 10px 30px;
    padding: 0;
    vertical-align: top;
    width: auto;
    @include maginot(80px, 80px);
    .grid {
      display: inline-block;
      float: none;
      width: auto;
    }
  }
  .team-member {
    min-height: 0;
  }
  .image-background {
    height: 80px;
    margin: 0 auto;
    overflow: hidden;
    width: 80px;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border-radius: 50%;
    .maginot {
      margin: 0 auto;
      img {
        height: auto;
      }
    }
  }
  .leader {
    .image-background {
      height: 150px;
      width: 150px;
    }
    @include maginot(150px, 150px);
  }
  .person, .team {
    width: 130px;
    h3 {
      font-size: 19px;
    }
  }
}

@media print {
  .organogram {
    #global-header, .login-bar, .breadcrumbs, .search-box, .edit-links, #footer, #last_update, .new-profile {
      display: none;
    }
  }

  .organogram-content {
    #print {
      display: none;
    }
    .group-title {
      margin: 0;
    }
    .leader, .person, .team {
      font-size: 12px;
      margin-bottom: 10px;
      h3 {
        font-size: 12px;
      }
    }
    .leader {
      .image-background {
        height: 80px;
        width: 80px;
      }
      .maginot {
        width: 80px;
        .barrier, img {
          width: 80px;
          height: 80px;
        }
        img {
          clip: rect(0px, 80px, 80px, 0px);
        }
      }
    }
    .person, .team {
      .image-background {
        height: 50px;
        width: 50px;
      }
      .maginot {
        width: 50px;
        .barrier, img {
          width: 50px;
          height: 50px;
        }
        img {
          clip: rect(0px, 50px, 50px, 0px);
        }
      }
    }
    .team {
      width: 80px;
    }
  }
}

